# forked-u-MCP-Kali-Server

./: .env.example  .gitignore  BRANCH_PROTECTION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RELEASE_READY_SUMMARY.txt  SECURITY.md  codeql.yml  docker-compose.yml  kali_server.py  mcp_server.py  pyproject.toml  requirements.txt  test_basic.py
.github/: dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: branch-protection-reminder.yml  ci.yml  codeql.yml  release.yml
models/: __init__.py  client.py  executor.py
tests/: conftest.py  test_models.py
